<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/are_you_sure"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sentance"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="#212121"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorAccent"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:backgroundTint="@color/colorAccent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>